# ai_doc_analys

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: documents.py  qa.py  search.py  summary.py
backend/app/core/: config.py  database.py
backend/app/db/: __init__.py  models.py
backend/app/domain/: __init__.py  chunks.py  documents.py  retrieval.py
backend/app/prompts/: qa_prompt.txt  summary_detailed_prompt.txt
backend/app/schemas/: documents.py  qa.py  search.py  summary.py
backend/app/services/: chunking.py  embeddings.py  ingestion.py  openrouter.py  qa.py  reranking.py  retrieval.py  storage.py  summary.py  text_normalization.py  vector_store.py
backend/app/services/parsers/: __init__.py  base.py  pdf_parser.py  txt_parser.py
backend/tests/: conftest.py  test_chunking.py  test_documents_upload.py  test_openrouter.py  test_pdf_parser.py  test_qa.py  test_reranking.py  test_search.py  test_summary.py  test_text_normalization.py
docs/: README.ru.md  README.zh.md
docs/superpowers/plans/: 2026-04-23-ai-document-analyst-foundation-mvp.md
docs/superpowers/specs/: 2026-04-23-ai-document-analyst-foundation-mvp-design.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  i18n.tsx  main.tsx  styles.css  types.ts
frontend/src/components/: DocumentList.test.tsx  DocumentList.tsx  DocumentUpload.tsx  QAPanel.test.tsx  QAPanel.tsx  SearchPanel.test.tsx  (+4 more)
(+4 files in other folders)
